added model evaluation

--- a/Beginner Task/stock_market_prediction.ipynb
+++ b/Beginner Task/stock_market_prediction.ipynb
@@ -1014,6 +1014,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random Forest Regression Results:\n",
+      "Train RMSE: 70.15, Train R^2: -1.08\n",
+      "Test RMSE: 64.13, Test R^2: -0.72\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Evaluate the model\n",
+    "train_rmse_rf = mean_squared_error(y_train, y_train_pred_rf, squared=False)\n",
+    "test_rmse_rf = mean_squared_error(y_test, y_test_pred_rf, squared=False)\n",
+    "train_r2_rf = r2_score(y_train, y_train_pred_rf)\n",
+    "test_r2_rf = r2_score(y_test, y_test_pred_rf)\n",
+    "\n",
+    "print(\"Random Forest Regression Results:\")\n",
+    "print(f\"Train RMSE: {train_rmse_rf:.2f}, Train R^2: {train_r2_rf:.2f}\")\n",
+    "print(f\"Test RMSE: {test_rmse_rf:.2f}, Test R^2: {test_r2_rf:.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
    "outputs": [
@@ -1286,6 +1313,33 @@
     "plt.title(\"Stock Market Prediction and Forecasting using LSTM\")\n",
     "plt.legend()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LSTM Results:\n",
+      "Train RMSE: 3.97, Train R^2: 0.99\n",
+      "Test RMSE: 4.09, Test R^2: 0.99\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Evaluate the model\n",
+    "train_rmse_lstm = mean_squared_error(y_train_lstm, y_train_pred_lstm, squared=False)\n",
+    "test_rmse_lstm = mean_squared_error(y_test_lstm, y_test_pred_lstm, squared=False)\n",
+    "train_r2_lstm = r2_score(y_train_lstm, y_train_pred_lstm)\n",
+    "test_r2_lstm = r2_score(y_test_lstm, y_test_pred_lstm)\n",
+    "\n",
+    "print(\"LSTM Results:\")\n",
+    "print(f\"Train RMSE: {train_rmse_lstm:.2f}, Train R^2: {train_r2_lstm:.2f}\")\n",
+    "print(f\"Test RMSE: {test_rmse_lstm:.2f}, Test R^2: {test_r2_lstm:.2f}\")"
    ]
   }
  ],
