--- a/Intermediate Task/decision_tree_predictions.ipynb
+++ b/Intermediate Task/decision_tree_predictions.ipynb
@@ -674,6 +674,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Decision Tree Classifier Model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
